* BES Encounters changes - admin pages to create and edit schools
* BES Encounters changes - move and increase size of new resource upload button
* BES Encounters changes - show resource set on select resource 
* BES Encounters changes - improve spacing on search resources page
* BES Encounters changes - add missing titles to find activities

# 8/9/22 - Version 3.6.4
* BES Encounters changes - admin user: resource and activity reports 
* BES Encounters changes - admin user school/ecologist pairing
* BES Encounters changes - admin user access to all resources (add/edit/delete)
* BES Encounters changes - teacher admin of student accounts
* BES Encounters changes - link back to Encounters from kiosk if a school user
* Add invertebrate animal type

# 13/7/22 - Version 3.6.3
* BES Encounters changes to improve resource hub
* BES Encounters changes to allow more than one module of activities
* BES Encounters changes to allow more than one module of activities

# 1/4/22 - Version 3.6.2
* style updates
* include ecologist points in school total
* allow individual school users to not be included in school points

# 16/3/22 - Version 3.6.1
* admin page added
* order schools alphabetically on community page

# 8/3/22 - Version 3.6.0
* Schools awards and badges added
* Resource hub added
* css moved to templates within Joomla

# 30/12/21 - Version 3.5.2
* Add project specific reports
* Add user effort reports, current month and all months versions

# 20/11/21 - Version 3.5.1
* Improve check of JWT key
* Invert colour button for image and video classification:wait

# 5/11/21 - Version 3.5.1   #
* Extension of kiosk to provide an audio version.
* Replace commas in notes field on reports
* Change number of files converted from avi to 10 at a time

# 2/7/21 - Version 3.5.0   #
* New version of kiosk, with Get Started, Learn, Classify, Quiz, Map and About pages
* Changes for version 1 kiosks to pick up the new version from an Enter screen.