@@ -26,8 +26,6 @@ class BioDivViewResourceAdd extends JViewLegacy
 
     public function display($tpl = null) 
     {
-		error_log ( "ResourceAdd display function called" );
-		
 		// Get all the text snippets for this view in the current language
 		$this->translations = getTranslations("resourceadd");
 	
